gl31-master/src/test/deca/syntax/valid/complet/empty_classextends.deca
// Description:
//    tests de programme correct syntaxiquement pour complet
//
// Resultats:
//    Succes attendu
//
// Historique:
//    cree le 18/01/2021
class Test extends AbstractTest{
}
