gl31-master/src/test/deca/syntax/invalid/complet/unopened_class.deca
// Description:
//    tests de programme incorrect syntaxiquement pour complet
//
// Resultats:
//    Ligne 9 : Erreur, '{' manquant
//
// Historique:
//    cree le 18/01/2021
class Test
}
